# Django-React

./: .gitignore  pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.js  webpack.config.js
frontend/src/: index.js  input.css
frontend/static/css/: style.css
frontend/static/frontend/: main.js
frontend/templates/frontend/: index.html
myproject/: settings.py  urls.py
staticfiles/css/: style.css
staticfiles/frontend/: main.js
