[tool.poetry]
name = "django-react"
version = "0.1.0"
description = ""
authors = ["WissamZaidi <wzaidi@stu.kau.edu.sa>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
